[WIP] gs-backup-restore: Migration to Spring Batch 5.2.x